Corrected alignment

--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ a:hover >section{
     box-sizing: border-box;
     background-image: url(../images/data-centre.jpg);
     background-repeat: no-repeat;
-    background-position: 140% 30%; 
+    background-position: 120% 30%; 
     background-size: 90%;
 }
 
